syntax = "proto3";
package fitness_aggregator.v1;

option go_package = "gitlab.com/purposeless-lab/monorepo/fitness-aggregator/server/api/proto/v1";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "v1/persons.proto";

service FitnessAggregator {
  rpc CreateClient(CreateClientRequest) returns (CreateClientResponse) {
    option idempotency_level = IDEMPOTENT;

    option (google.api.http) = {
      post: "/api/v1/client",
      body: "*",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "201",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.CreateClientResponse"}
          }
        }
      }
    };
  }

  rpc GetClients(GetClientsRequest) returns (GetClientsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;

    option (google.api.http) = {
      get: "/api/v1/client",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.GetClientsResponse"}
          }
        }
      }
    };
  }

  rpc GetClient(GetClientRequest) returns (GetClientResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;

    option (google.api.http) = {
      get: "/api/v1/client/{id}",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.GetClientResponse"}
          }
        }
      }
    };
  }

  rpc DeleteClient(DeleteClientRequest) returns (DeleteClientResponse) {
    option idempotency_level = IDEMPOTENCY_UNKNOWN;

    option (google.api.http) = {
      delete: "/api/v1/client/{id}",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "204",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.DeleteClientResponse"}
          }
        }
      }
    };
  }
}

message CreateClientRequest {
  Client client = 1;
}

message CreateClientResponse {
  string client_id = 1;
}

message GetClientsRequest {}

message GetClientsResponse {
  repeated Person clients = 1;
}

message GetClientRequest {
  string id = 1;
}

message GetClientResponse {
  Person client = 1;
}

message DeleteClientRequest {
  string id = 1;
}

message DeleteClientResponse {}